--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-composer-scaffold": "^10.4",
         "drupal/core-project-message": "^10.4",
         "drupal/core-recommended": "^10.4",
+        "drupal/tracer": "^1.0",
         "drupal/webprofiler": "^10.3",
         "drush/drush": "^13.3"
     },
