block class module added

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "composer/installers": "^2.0",
         "drupal/adminimal_admin_toolbar": "^2.0",
         "drupal/adminimal_theme": "^1.7",
+        "drupal/block_class": "^4.0",
         "drupal/bootstrap5": "^4.0",
         "drupal/core-composer-scaffold": "^10.4",
         "drupal/core-project-message": "^10.4",
