--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "drupal/paragraphs": "^1.18",
         "drupal/pathauto": "^1.13",
         "drupal/redirect": "^1.11",
+        "drupal/token_or": "^2.3",
         "drupal/tracer": "^1.0",
         "drupal/twbstools": "^2.1",
         "drupal/views_bootstrap": "^5.5@RC",
