--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/core-project-message": "^10.4",
         "drupal/core-recommended": "^10.4",
         "drupal/entity_reference_revisions": "^1.12",
+        "drupal/fontawesome": "^3.0",
         "drupal/nys_unav": "^3.0",
         "drupal/paragraphs": "^1.18",
         "drupal/pathauto": "^1.13",
