--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/core-composer-scaffold": "^10.4",
         "drupal/core-project-message": "^10.4",
         "drupal/core-recommended": "^10.4",
+        "drupal/editor_advanced_image": "^3.0",
         "drupal/entity_browser": "^2.12",
         "drupal/entity_reference_revisions": "^1.12",
         "drupal/fontawesome": "^3.0",
